Add ingredient information

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,5 +8,32 @@
   </head>
   <body>
     <h1>Lasagna</h1>
+    <img src="../img/lasagna.jpg" alt="A delicious cheesy lasagna" />
+    <h2>Description</h2>
+    <p>
+      A classic recipe of one of the most loved foods in the world. The ultimate
+      comfort food = homemade lasagna. Family and friends gather around the
+      dinner table at any time for this lasagna recipe. A big warm comforting
+      hug within layers of pasta, tomato sauce, white sauce and melted cheese!
+    </p>
+    <h2>Ingredients</h2>
+    <ul>
+      <li>1 tablespoon olive oil</li>
+      <li>1 onion, finely chopped</li>
+      <li>1 carrot, finely diced</li>
+      <li>4 cloves garlic cloves, minced</li>
+      <li>24 ounces (700 grams) ground beef mince</li>
+      <li>10 ounces (300 grams) ground pork mince, or beef</li>
+      <li>24 ounces (700 grams) Passata</li>
+      <li>14 ounces (410 grams) crushed tomatoes</li>
+      <li>
+        3 heaped tablespoons tomato paste, (I use garlic and herbs flavoured)
+      </li>
+      <li>2 beef or vegetable bouillon cubes, crushed</li>
+      <li>1 teaspoon each dried oregano and basil</li>
+      <li>1/2 teaspoon sugar, (if desired)</li>
+      <li>Salt and pepper, season to your tastes</li>
+    </ul>
+    <h2>Steps</h2>
   </body>
 </html>
