lasagna recipe complete

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -35,5 +35,25 @@
       <li>Salt and pepper, season to your tastes</li>
     </ul>
     <h2>Steps</h2>
+    <ol>
+      <li>
+        Heat oil in a large pot over medium heat, then add in the onion and
+        carrots and cook for 8-10 minutes, or until softened. Add in the garlic
+        and sauté for about 1 minute, until fragrant.
+      </li>
+      <li>
+        Add beef and pork (if using) and cook while breaking it up with the end
+        of your spoon, until browned.
+      </li>
+      <li>
+        Pour in the Passata, crushed tomatoes, tomato paste, crushed bouillon
+        and dried herbs. Mix well to combine and bring to a gentle simmer.
+        Season with desired amount of salt and pepper (I use about 3/4 teaspoon
+        each) and sugar if needed. Cover and cook for about 20-30 minutes,
+        occasionally mixing, until the sauce has thickened slightly and meat is
+        tender.
+      </li>
+      <li>Adjust salt, pepper and dried herbs to your taste.</li>
+    </ol>
   </body>
 </html>
