Add img, html, and link on index.html for Artisan Bread page

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna</a>
     <a href="recipes/chili-butter-shrimp.html">Chili Butter Shrimp</a>
+    <a href="recipes/artisan-bread.html">Artisan Bread</a>
   </body>
 </html>
