add links back to homepage on recipe pages

--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna</a>
-    <a href="recipes/chili-butter-shrimp.html">Chili Butter Shrimp</a>
-    <a href="recipes/artisan-bread.html">Artisan Bread</a>
+    <ul>
+      <li><a href="recipes/lasagna.html">Lasagna</a></li>
+      <li>
+        <a href="recipes/chili-butter-shrimp.html">Chili Butter Shrimp</a>
+      </li>
+      <li><a href="recipes/artisan-bread.html">Artisan Bread</a></li>
+    </ul>
   </body>
 </html>
