--- a/recipes/artisan-bread.html
+++ b/recipes/artisan-bread.html
@@ -72,5 +72,6 @@
       </li>
       <li>Transfer to a wire rack to cool for 10 minutes before slicing.</li>
     </ol>
+    <a href="../index.html">Return to homepage</a>
   </body>
 </html>
