--- a/recipes/chili-butter-shrimp.html
+++ b/recipes/chili-butter-shrimp.html
@@ -36,14 +36,19 @@
     <h2>Steps</h2>
     <ol>
       <li>
-        Heat olive oil in a large pan or skillet over medium heat. Add the shrimp, season with salt and pepper to taste and sear for 1-2 minutes on each side (until just beginning to turn pink). 
+        Heat olive oil in a large pan or skillet over medium heat. Add the
+        shrimp, season with salt and pepper to taste and sear for 1-2 minutes on
+        each side (until just beginning to turn pink).
       </li>
       <li>
-        Quickly deglaze the pan with a splash of wine or broth (if using), scraping up any browned bits from the bottom of the pan. Add the butter, garlic, red chilis and parsley. Toss shrimp through the butter sauce and cook for a further 30 seconds - 1 minute until the shrimp is cooked through (being careful not to overcook your shrimp).
+        Quickly deglaze the pan with a splash of wine or broth (if using),
+        scraping up any browned bits from the bottom of the pan. Add the butter,
+        garlic, red chilis and parsley. Toss shrimp through the butter sauce and
+        cook for a further 30 seconds - 1 minute until the shrimp is cooked
+        through (being careful not to overcook your shrimp).
       </li>
-      <li>
-        Immediately take off heat and serve.
-      </li>
+      <li>Immediately take off heat and serve.</li>
     </ol>
+    <a href="../index.html">Return to homepage</a>
   </body>
 </html>
