--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -55,5 +55,6 @@
       </li>
       <li>Adjust salt, pepper and dried herbs to your taste.</li>
     </ol>
+    <a href="../index.html">Return to homepage</a>
   </body>
 </html>
