Add basic css styling with QOL updates
Add The Odin Project logo to all pages that points
back to the main page. Improve text styling and padding.

--- a/recipes/chili-butter-shrimp.html
+++ b/recipes/chili-butter-shrimp.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <title>Chili Butter Shrimp</title>
   </head>
   <body>
+    <a href="../index.html">
+      <img
+        class="main-logo"
+        src="../img/odin-logo.png"
+        alt="The Odin Project Logo"
+      />
+    </a>
+
     <h1>Chili Butter Shrimp</h1>
     <img
+    class="main-img"
       src="../img/chili-butter-shrimp.jpg"
       alt="A decadent chili butter shrimp recipe"
     />
