--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,12 +4,23 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <title>Lasagna</title>
   </head>
   <body>
+    <a href="../index.html">
+      <img
+        class="main-logo"
+        src="../img/odin-logo.png"
+        alt="The Odin Project Logo"
+      />
+    </a>
     <h1>Lasagna</h1>
-    <img src="../img/lasagna.jpg" alt="A delicious cheesy lasagna" />
+    <img
+      class="main-img"
+      src="../img/lasagna.jpg"
+      alt="A delicious cheesy lasagna"
+    />
     <h2>Description</h2>
     <p>
       A classic recipe of one of the most loved foods in the world. The ultimate
