--- a/index.html
+++ b/index.html
@@ -4,17 +4,26 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
     <title>Odin Recipes</title>
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <ul>
-      <li><a href="recipes/lasagna.html">Lasagna</a></li>
-      <li>
-        <a href="recipes/chili-butter-shrimp.html">Chili Butter Shrimp</a>
-      </li>
-      <li><a href="recipes/artisan-bread.html">Artisan Bread</a></li>
-    </ul>
+    <a href="./index.html">
+      <img
+        class="main-logo"
+        src="./img/odin-logo.png"
+        alt="The Odin Project Logo"
+      />
+    </a>
+    <div class="nav">
+      <h1>Odin Recipes</h1>
+      <ul>
+        <li><a href="recipes/lasagna.html">Lasagna</a></li>
+        <li>
+          <a href="recipes/chili-butter-shrimp.html">Chili Butter Shrimp</a>
+        </li>
+        <li><a href="recipes/artisan-bread.html">Artisan Bread</a></li>
+      </ul>
+    </div>
   </body>
 </html>
