--- a/recipes/artisan-bread.html
+++ b/recipes/artisan-bread.html
@@ -4,15 +4,27 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../style.css" />
     <title>Artisan Bread</title>
   </head>
   <body>
+    <a href="../index.html">
+      <img
+        class="main-logo"
+        src="../img/odin-logo.png"
+        alt="The Odin Project Logo"
+      />
+    </a>
+
     <h1>Artisan Bread</h1>
-    <img src="../img/artisan-bread.jpg" alt="A crusty loaf of artisan bread" />
+    <img
+      class="main-img"
+      src="../img/artisan-bread.jpg"
+      alt="A crusty loaf of artisan bread"
+    />
     <h2>Description</h2>
     <p>
-      t looks too good to be true, I know. Fluffy, crusty bread with no effort?
+      It looks too good to be true, I know. Fluffy, crusty bread with no effort?
       No way. But ever since we first saw this recipe a few years ago, we have
       been baking it just about every week. Now you will too! Beginner bakers
       rejoice: no intimidation needed!
